@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+Fixed bug where KDS import would trigger delete_hook calls when
+updating elements for stories and categories. [Sam]
+
+=item *
+
 Allow users whose page-size preference is 100, to be able to toggle
 between 100 and 20, instead of 100 and 100. [Michael Peters]
 
